--- a/source/app/assets/stylesheets/offers.scss
+++ b/source/app/assets/stylesheets/offers.scss
@@ -2,17 +2,11 @@ body {
   padding-top: 40px;
 }
 
-.fetch {
-  position: absolute;
-  width: 100px;
-}
-
 .offers {
-
   .offer {
     border: 1px solid gray;
     padding: 3px;
     margin: 10px 10px 10px 0px;
-
+    border-radius: 4px;
   }
 }
