--- a/source/app/views/offers/index.html.haml
+++ b/source/app/views/offers/index.html.haml
@@ -2,12 +2,15 @@
 
   .offers
     - if @offers.any?
-      %h1
-        = pluralize(@offers.size, 'Offer')
-      %p
-        Only showing offers with not blank titles
+      .hero-unit
+        %h1
+          = pluralize(@offers.size, 'Offer')
+        %p
+          Only showing offers with not blank titles
       - @offers.each do |offer|
         %div.offer
           %h2= offer.title
           %p= offer.description
-          =button_to 'Get deal', offer.url
+          .row
+            .span1.offset7
+              =button_to 'Get deal', offer.url, class: "btn"
