--- a/source/app/views/layouts/application.html.erb
+++ b/source/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
           <div class="span3">
             <div class="well sidebar-nav">
               <ul class="nav nav-list">
-                <li><%= button_to "Fetch", offers_fetch_path, class: "btn btn-primary"%></li>
+                <li><%= button_to "Crawl!", offers_fetch_path, class: "btn btn-primary"%></li>
               </ul>
             </div><!--/.well -->
           </div><!--/span-->
